# A.U.0

./: .gitignore  LICENSE  deploy.sh  plan.md  setup.sh  tui_plan.txt
src/: CMakeLists.txt  clean.sh  main.cpp
